# test_crypto_repo

./: .gitignore  LICENSE  README.md
java-gradle-app/: build.gradle.kts  settings.gradle.kts
java-gradle-app/src/main/java/com/example/crypto/: GradleCryptoApp.java
java-maven-app/: pom.xml
java-maven-app/src/main/java/com/example/crypto/: CryptoApp.java
node-npm-app/: package-lock.json  package.json
node-npm-app/src/: index.js
python-pip-app/: requirements-dev.txt  requirements.txt
python-pip-app/src/: __init__.py  crypto_utils.py
python-poetry-app/: pyproject.toml
python-poetry-app/src/: __init__.py  crypto_utils.py
